; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_delegation.c_nfs_free_delegation.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_delegation.c_nfs_free_delegation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfs_delegation = type { i32, i32* }

@nfs_free_delegation_callback = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nfs_delegation*)* @nfs_free_delegation to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nfs_free_delegation(%struct.nfs_delegation* %0) #0 {
  %2 = alloca %struct.nfs_delegation*, align 8
  store %struct.nfs_delegation* %0, %struct.nfs_delegation** %2, align 8
  %3 = load %struct.nfs_delegation*, %struct.nfs_delegation** %2, align 8
  %4 = getelementptr inbounds %struct.nfs_delegation, %struct.nfs_delegation* %3, i32 0, i32 1
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %14

7:                                                ; preds = %1
  %8 = load %struct.nfs_delegation*, %struct.nfs_delegation** %2, align 8
  %9 = getelementptr inbounds %struct.nfs_delegation, %struct.nfs_delegation* %8, i32 0, i32 1
  %10 = load i32*, i32** %9, align 8
  %11 = call i32 @put_rpccred(i32* %10)
  %12 = load %struct.nfs_delegation*, %struct.nfs_delegation** %2, align 8
  %13 = getelementptr inbounds %struct.nfs_delegation, %struct.nfs_delegation* %12, i32 0, i32 1
  store i32* null, i32** %13, align 8
  br label %14

14:                                               ; preds = %7, %1
  %15 = load %struct.nfs_delegation*, %struct.nfs_delegation** %2, align 8
  %16 = getelementptr inbounds %struct.nfs_delegation, %struct.nfs_delegation* %15, i32 0, i32 0
  %17 = load i32, i32* @nfs_free_delegation_callback, align 4
  %18 = call i32 @call_rcu(i32* %16, i32 %17)
  ret void
}

declare dso_local i32 @put_rpccred(i32*) #1

declare dso_local i32 @call_rcu(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
